modificaciones de quoris y de galeria

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="card-body cardindex" >
                       <h5 class="card-title">Nosotros</h5>
                       <p class="card-text">Sumérgete en los acordes revolucionarios de una banda icónica. ¡Conocenos desde nuestros inicios!</p>
-                      <a href="./page/historialpda.html" class="botoncard">Descubre</a>
+                      <a href="./page/historialpda.html" class="botoncard1">Descubre</a>
                     </div>
                   </div>
                 </div>
@@ -83,7 +83,7 @@
                       <h5 class="card-title">Nuestra Seleccion</h5>
                       <p class="card-text">
                         ¡Descubre la magia de Las Pastillas del Abuelo! Visita nuestra web y disfruta de nuestra selección de los mejores temas que te harán vibrar.</p>
-                      <a href="./page/musica.html" class="botoncard">Disfruta</a>
+                      <a href="./page/musica.html" class="botoncard1">Disfruta</a>
                     </div>
                   </div>
                 </div>
