agregamos carrito y js al proyecto

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                   <a class="nav-link" href="./page/historialpda.html">Historia</a>
                   <a class="nav-link" href="./page/musica.html">Musica</a>
                   <a class="nav-link" href="./page/contacto.html">Contacto</a>
+                  <a class="nav-link" href="./page/tienda.html">Tienda</a>
                 </div>
               </div>
             </div>
@@ -130,7 +131,7 @@
           <img src="https://www.pastillas.com.ar/images/logo.png" height="80px" alt="Logo LPDA">
       </div>
   </footer>
-  
+ <script src="index.js"></script> 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   AOS.init();
